swaggo migration docs; init db

--- a/example/byodb/.env
+++ b/example/byodb/.env
@@ -2,5 +2,17 @@
 PORT=8000
 ADMIN_BEARER_TOKEN=dev-admin-token
 CORS_ALLOW_ORIGINS=*
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/byodb?sslmode=disable
-BAZ=foo
+
+# Canonical app connection settings (used by Makefile + migrations)
+PG_HOST=localhost
+PG_PORT=5432
+PG_DB=byodb
+PG_USER=byodb
+PG_PASS=byodb
+
+# Admin credentials on the same PG host/port
+PG_ADMIN_USER=postgres
+PG_ADMIN_PASS=postgres
+
+# Runtime app DSN (used by the API process)
+DATABASE_URL=postgres://byodb:byodb@localhost:5432/byodb?sslmode=disable
